// Copyright 2025 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package google.aggregate.protos.frontend.api.v1;

option java_outer_classname = "ReturnCodeProto";
option java_package = "com.google.aggregate.protos.frontend.api.v1";

/** Return codes for aggregation worker. */
enum ReturnCode {
  RETURN_CODE_UNKNOWN = 0;
  // Job was successful.
  SUCCESS = 1;
  // An unspecified fatal error occurred.
  UNSPECIFIED_ERROR = 2;
  // The aggregation request failed because it took too long.
  TIMEOUT = 3;
  // The aggregation job retried too many times by different workers.
  RETRIES_EXHAUSTED = 4;
  // The aggregation service could not download the input data from cloud storage or the data was
  // malformed and could not be read
  INPUT_DATA_READ_FAILED = 5;
  // The input contained too few reports to be aggregated.
  INPUT_DATA_TOO_SMALL = 6;
  // The aggregation service could not write the aggregated result to cloud storage.
  OUTPUT_DATAWRITE_FAILED = 7;
  // Job failed due to an internal issue in aggregation service and can be retried
  INTERNAL_ERROR = 8;
}
