// Copyright 2025 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package google.aggregate.protos.shared.backend;

option java_outer_classname = "JobErrorCategoryProto";
option java_package = "com.google.aggregate.protos.shared.backend";

/**
 * Describes a category of error message, used to distinguish between various decryption or
 * validation failures reported by the ErrorSummary message.
 */
enum JobErrorCategory {
  JOB_ERROR_CATEGORY_UNKNOWN = 0;
  DECRYPTION_ERROR = 1;
  HYBRID_KEY_ID_MISSING = 2;
  UNSUPPORTED_OPERATION = 3;
  GENERAL_ERROR = 4;
  // TODO: Remove when removing numReportsWithErrors from shared ErrorSummary
  NUM_REPORTS_WITH_ERRORS = 5;
}
